# bismon

./: .dir-locals.el  .gdbinit  .gitattributes  .gitignore  .gitmodules  .indent.pro  BISMON-config.cc  BM_compile_module.cc  BM_compile_tempmodule.cc  BM_compmod.hh  BM_compmod_guile.cc  BM_makeconst.cc  BUILD-BISMON.bash  Bismon-Builder.py  Bismon_Builder.py  Build  CMakeLists.txt  Configure  Dash-Analyze  GNUmakefile  GNUremakefile  Hello-World-Analyze  Makefile  Msh-Analyze  README.md  _bm_delim.h  _bm_global.h  _bm_predef.h  _bm_types.h  _genbm_global.h  _genbm_predef.h  agenda_BM.c  allocgc_BM.c  assoc_BM.c  bismon.css  bismon.h  bismon.ui  bismon_builder.py  bismonion  bm_delim.h  (+87 more)
.attic/: BM_compmod.hh  Msh-Analyze  bismon.ui  generate-ninja-build.scm  gui_GTKBM.c  guibrowse_GTKBM.c
.attic/gtk_rust_bismon/: Cargo.toml
.attic/webroot/: !README
.attic/webroot/css/: images  jquery-ui.css
.attic/webroot/jscript/: vue.js
.attic/webroot/themes/: first-theme.css
Plugins/: !README  SayHello.c  ShowObject.c
TestHelloWorld/: testhw-main.c  testhw-sayhello.c
attic/: Makefile  Makefile.old  changepasswd_ONIONBM.thtml  forgotwebpage_ONIONBM.thtml  generate-ninja-builder.sh  guibrowse_GTKBM.c  guicode_GTKBM.c  guicommand_GTKBM.c  guiparse_GTKBM.c  web_ONIONBM.c
attic/gtk_rust_bismon/src/: main.rs
cmake/: FindLibonion.cmake  Findlibbacktrace.cmake
dependencies/: README-dependencies.md
doc/: BAD_appendix-bm.tex  appendix-bm.tex  bismon-biblio.bib  bismon-chariot-doc.tex  bismon-doc.tex  bismon-hevea.hva  bismon-latex.tex  conclus-bm.tex  datapersist-bm.tex  intro-bm.tex  miscwork-bm.tex  staticanalys-bm.tex  using-bm.tex
doc/examples/: factinline12.c  mallfree.c
doc/genscripts/: 000-lastgitcommits.sh  001-extract-ctype-dump.sh  001-extract-firsttestmodule-dump.sh  002-gimple-factinline.sh  003-ssaopt-factinline.sh  004-gimplessa-mallfree.sh  005-bismon-help.sh  cross-gcc-config.bash  straight-gcc-config.bash
doc/images/: CHARIOT-logo.eps
drafts/: emithtml  outemit  testplugin_decayedob.c  testplugin_projectob.c
gccplugins/: !README  build-gcc10-metaplugin.sh  build-gcc11-metaplugin.sh  build-gcc12-metaplugin.sh  gcc10-metaplugin.cc  gcc10-metaplugin.hh  gcc10-metaplugin_BMGCC.cc  gcc10_metaplugin_BMGCC.cc  gcc10_metaplugin_BMGCC.hh  gcc11_metaplugin_BMGCC.hh  gcc12_metaplugin_BMGCC.cc  gcc12_metaplugin_BMGCC.hh
gccplugins/attic/: gcc8plugin-demo-chariot-2019Q2.cc
gtk_rust_bismon/: Cargo.toml
gtk_rust_bismon/src/: main.rs
guigtk/: !README  .gdbinit  .gitignore  .indent.pro  bismon-gui-minilisp.h  build.sh  gtkbismonlisp.c  indent.sh  jsonbismonlisp.c  minilisp.c  minilispbismon.h  test01.sh  test02.sh
libbismonclient/: GNUMakefile  GNUmakefile  bismonclient.hh  jsonrpc_BMCL.cc  request_BMCL.cc
libclient/: !README
misc/: Dockerfile  README.md  bisect-redump.sh  email-test.sh  protoemail.html  test-jsonextract.sh  test-several-contributors.sh
modulbin/: !README
modules/: !README  modbm_1lhXvXtIyPu_3nhuy4kN3wd.c  modbm_1zCsXG4OTPr_8PwkDAWr16S.c  modbm_3BFt4NfJmZC_7iYi2dwM38B.c  modbm_55roYj6pggy_95lbHks0q2X.c  modbm_8oL3Mr0lJtL_5DdSEr80iHP.c  modbm_9dQJgjsq7hs_2T2RqXLkU0A.c  modbm_9kQRAaOWJ97_99Im2N6Lv0O.c  modbm_9oXtCgAbkqv_4y1xhhF5Nhz.c
scripts/: build.sh  test.sh
talks/Lamsade-21nov2019/: .gitignore  Bismon-Starynkevitch-Lamsade-21nov2019.tex  CEA-List-logo.eps  beamerthemeBismon.sty  build.sh
webroot/: !README
webroot/css/: richtext.min.css
webroot/jscript/: bismon-hwroot.js  jcanvas.js  jquery-ui.js  jquery.js  jquery.richtext.js
webroot/themes/: first-theme.css  second-theme.css
